--- a/index.html
+++ b/index.html
@@ -45,19 +45,20 @@ layout: default
 		
 </div>
 
-{% if paginator.total_pages > 1 %}
 <div class="pagination">
-	<ul>
-{% if paginator.previous_page %}
-		<li class="prev"><a href="/blog/{% if paginator.previous_page != 1 %}page{{ paginator.previous_page }}{% endif %}">Previous</a></li>
-{% endif %}
-		<li><a {% if paginator.page == 1 %}class="active" {% endif %}href="/blog/">1</a></li>
-{% for count in (2..paginator.total_pages) %}
-		<li><a {% if paginator.page == count %}class="active" {% endif %}href="/blog/page{{ count }}">{{ count }}</a></li>
-{% endfor %}
-{% if paginator.next_page %}
-		<li class="next"><a href="/blog/page{{ paginator.next_page }}">Next</a></li>
-{% endif %}
-	</ul>
+  {% if paginator.next_page %}
+    <a class="pagination-item older" href="{{ site.baseurl }}page{{paginator.next_page}}">Previous</a>
+  {% else %}
+    <span class="pagination-item older">Older</span>
+  {% endif %}
+  {% if paginator.previous_page %}
+    {% if paginator.page == 2 %}
+      <a class="pagination-item newer" href="{{ site.baseurl }}">Newer</a>
+    {% else %}
+      <a class="pagination-item newer" href="{{ site.baseurl }}page{{paginator.previous_page}}">Next</a>
+    {% endif %}
+  {% else %}
+    <span class="pagination-item newer">Newer</span>
+  {% endif %}
 </div>
 {% endif %}
