--- a/index.html
+++ b/index.html
@@ -44,37 +44,16 @@ layout: default
 	    {% endfor %}
 		
 </div>
-<div class="row-fluid">
-  <div class="span12">
-    <div class="pagination">
-      <ul>
-        {% if paginator.previous_page %}
-          {% if paginator.previous_page == 1 %}
-          <li><a href="/">Prev</a></li>
-          {% else %}
-          <li><a href="/page{{ paginator.previous_page }}">Prev</a></li>
-          {% endif %}
-        {% else %}
-        <li><span class="disabled">Prev</span></li>
-        {% endif %}
-        {% if paginator.page == 1 %}
-        <li><span class="active">1</span></li>
-        {% else %}
-        <li><a href="/">1</a></li>
-        {% endif %}
-        {% for count in (2..paginator.total_pages) %}
-          {% if count == paginator.page %}
-          <li><span class="active">{{ count }}</span></li>
-          {% else %}
-          <li><a href="/page{{ count }}">{{ count }}</a></li>
-          {% endif %}
-        {% endfor %}
-        {% if paginator.next_page %}
-        <li><a href="/page{{ paginator.next_page }}">Next</a></li>
-        {% else %}
-        <li><span class="disabled">Next</span></li>
-        {% endif %}
-      </ul>
-    </div>
-  </div>
-</div>
+
+{% if paginator.previous_page %}
+    {% if paginator.previous_page == 1 %}
+        {% capture previous_page %}/{% endcapture %}
+    {% else %}
+        {% capture previous_page %}/page{{ paginator.previous_page }}{% endcapture %}
+    {% endif %}
+    <a href="{{ previous_page }}" class="previous">&larr; Newer Posts</a>
+{% endif %}
+ 
+{% if paginator.next_page %}
+    <a href="/page{{ paginator.next_page }}" class="next">Older Posts &rarr;</a>
+{% endif %}
