--- a/index.html
+++ b/index.html
@@ -58,3 +58,24 @@ layout: default
 {% endif %}
 
 </div>
+
+<div class="sidebar">
+
+<h3>Menu</h3>
+
+<ul>
+<li><About</li>
+<li>Illness</li>
+<li>Contact</li>
+<li>Archive</li>
+</ul>
+
+      <div class="trigger">
+        {% for page in site.pages %}
+          {% if page.title %}
+          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+          {% endif %}
+        {% endfor %}
+      </div>
+
+</div>
