--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ layout: default
 <h3>Menu</h3>
 
 <ul>
-<li><About</li>
+<li>About</li>
 <li>Illness</li>
 <li>Contact</li>
 <li>Archive</li>
@@ -73,7 +73,7 @@ layout: default
       <div class="trigger">
         {% for page in site.pages %}
           {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+          <ul><li><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li></ul>
           {% endif %}
         {% endfor %}
       </div>
