--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ layout: default
       <div class="trigger">
         {% for page in site.pages %}
           {% if page.title %}
-          <ul><li><a class="menu-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li></ul>
+          <ul><li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li></ul>
           {% endif %}
         {% endfor %}
       </div>
