--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ layout: default
 <h3>Menu</h3>
 
 <ul>
-<li>About</li>
+<li><a href="/about/">About</a></li>
 <li>Illness</li>
 <li>Contact</li>
 <li>Archive</li>
