--- a/index.html
+++ b/index.html
@@ -64,18 +64,20 @@ layout: default
 <h3>Menu</h3>
 
 <ul>
-<li><a href="/about/">About</a></li>
+<li>About</li>
 <li>Illness</li>
 <li>Contact</li>
 <li>Archive</li>
 </ul>
 
-      
+      <div class="trigger">
+	  <ul>
         {% for page in site.pages %}
           {% if page.title %}
-          <ul><li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li></ul>
+          <li><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
           {% endif %}
         {% endfor %}
-     
+		</ul>
+      </div>
 
 </div>
