--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
   <link rel="dns-prefetch" href="//pagead2.googlesyndication.com">
   <link rel="preconnect" href="//www.google-analytics.com/">
   <link rel="preconnect" href="//pagead2.googlesyndication.com">
-  <meta name="author" content="getwellwishes.net">
+  <meta name="author" content="getwellmessages.net">
   <meta name="description"  content="Find the best get well wishes and let a friend or loved one know you're thinking of them with these touching get well soon messages.">
   <meta name="keywords" content="get well messages, get well wishes, compassionate get well messages, get well">
   <meta property="og:type" content="website">
@@ -25,12 +25,9 @@
   <a href="/" class="logo"><img src="/img/get-well-messages.png" alt="Get Well Messages"></a>
 
 <div class="wrapper">
-  <div class="row">
-      <div class="col">
           <h1>Get Well Wishes</h1>
       </div>
-      <div class="col">
-<div class="sharing">
+      <div class="sharing">
 
   <a class="sharing-button twitter" href="https://twitter.com/intent/tweet?text=Test Post!&amp;url=http://www.crotchet.net/test-post/&amp;via=crotchetnet&amp;related=crotchetnet" rel="nofollow" title="Share on Twitter">Twitter</a>
 
