--- a/index2.html
+++ b/index2.html
@@ -42,7 +42,7 @@ Stuff about get well card messages and what to say goes in here. Got to pad it o
 
 Adsense ad here
 
-<ul>
+<ul class="heart">
 <li> </li>
 <li> </li>
 <li> </li>
