--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
   <a href="/" class="logo"><img src="/img/get-well-messages.png" alt="Get Well Messages"></a>
 
 <div class="wrapper">
-          <h1>Get Well Wishes</h1>
+          <h1>Get Well Wishes 1</h1>
       <div class="sharing">
 
   <a class="sharing-button twitter" href="https://twitter.com/intent/tweet?text=Test Post!&amp;url=http://www.crotchet.net/test-post/&amp;via=crotchetnet&amp;related=crotchetnet" rel="nofollow" title="Share on Twitter">Twitter</a>
