--- a/index2.html
+++ b/index2.html
@@ -37,7 +37,10 @@
 </div>
 
 <p>
-Stuff about get well card messages and what to say goes in here. Got to pad it out with stuff at the moment just to make ups paragraph. That'll do. 
+When a friend or loved one is ill, has had surgery or is recovering from an injury the natural reaction is to want them to get well soon. You don't want to see someone you care about suffering or feeling poorly. So the way we try to cheer them up whilst they recover (aside from visiting them) is to send a get well soon message and gift. Something that can help lift their spirits and make them feel better as quickly as possible. 
+  </p>
+  <p>
+Even a small gesture can go a long way when someone is feeling unwell. So use one of these 100 get well soon wishes to find the perfect words to let them know how much you're thinking of them. Touching or inspirational get well soon quotes and messages may be the boost that gives them a speedy recovery. So get your pen out and start writing!
 </p>
 
 Adsense ad here
