--- a/index2.html
+++ b/index2.html
@@ -45,6 +45,8 @@ Even a small gesture can go a long way when someone is feeling unwell. So use on
 
 Adsense ad here
 
+  <h2>Get Well Wishes</h2>
+  
 <ul class="heart">
 <li> </li>
 <li> </li>
