--- a/index2.html
+++ b/index2.html
@@ -103,13 +103,13 @@ Get well Image here
 <li> </li>
 </ul>
 
-<h2>Sample Get Well Wishes</h2>
+<h2>Get Well Soon Quotes</h2>
 
 <p>
 
 </p>
 
-<h2> </h2>
+<h2>Short </h2>
 
 <p>
 
