--- a/index2.html
+++ b/index2.html
@@ -48,24 +48,24 @@ Adsense ad here
   <h2>Get Well Wishes</h2>
   
 <ul class="heart">
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
+<li>Wishing you a speedy and full recovery. Hoping you feel much better really soon</li>
+<li>Sending you healthy thoughts and wishes for the fastest recovery</li>
+<li>Just a quick note to let you know you're in my thoughts and hoping you get well soon</li>
+<li>You're one of the strongest people I know - you'll be fighting fit in no time!</li>
+<li>Find strength in the friends and family around you, take their love and use it to heal</li>
+<li>As each day passes you're one closer to a complete recovery! Take those days one at a time and know we're here for you</li>
+<li>We were so sorry to hear you've been unwell. You are in our thoughts as you get back on your feet</li>
+<li>I hope this message let's you know how much we care and will be thinking of you. Wishing you better health</li>
+<li>Sending you sunshine to brighten your day and warm wishes for a speedy recovery</li>
+<li>We hope these flowers will add a little cheer to your day and you feel better soon </li>
 </ul>
 
 Adsense ad here
 
 <ul class="write">
-<li> </li>
-<li> </li>
-<li> </li>
+<li>Missing you loads and can't wait until I get to see you again! Get well soon!</li>
+<li>Our Prayers will be for you to feel better and make a swift recovery</li>
+<li>Recuperation takes time. Don't rush yourself, rest as much as you need and we're sure you'll be feeling better really soon</li>
 <li> </li>
 <li> </li>
 <li> </li>
