--- a/index2.html
+++ b/index2.html
@@ -48,7 +48,8 @@ Adsense ad here
   <h2>Get Well Wishes</h2>
   
 <ul class="heart">
-<li>Wishing you a speedy and full recovery. Hoping you feel much better really soon</li>
+  
+<li style="padding-left:20px;">Wishing you a speedy and full recovery. Hoping you feel much better really soon</li>
 <li>Sending you healthy thoughts and wishes for the fastest recovery</li>
 <li>Just a quick note to let you know you're in my thoughts and hoping you get well soon</li>
 <li>You're one of the strongest people I know - you'll be fighting fit in no time!</li>
