--- a/index2.html
+++ b/index2.html
@@ -63,7 +63,7 @@ Adsense ad here
 
 Adsense ad here
 
-<ul class="write">
+<ul class="heart">
 <li>Missing you loads and can't wait until I get to see you again! Get well soon!</li>
 <li>Our Prayers will be for you to feel better and make a swift recovery</li>
 <li>Recuperation takes time. Don't rush yourself, rest as much as you need and we're sure you'll be feeling better really soon</li>
