--- a/index2.html
+++ b/index2.html
@@ -67,15 +67,16 @@ Adsense ad here
 <li>Missing you loads and can't wait until I get to see you again! Get well soon!</li>
 <li>Our Prayers will be for you to feel better and make a swift recovery</li>
 <li>Recuperation takes time. Don't rush yourself, rest as much as you need and we're sure you'll be feeling better really soon</li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
+<li>I hope this message can help you feel a little better and bring a smile to your face</li>
+<li>Remember that you're not alone. We'll be here by your side as you get through this</li>
+<li>Work has been so boring without you there! We all can't wait to have you back, so please get well soon</li>
+<li>Don't worry, we'll fight this together. I know we can win! You'll be feeling better before you know it</li>
+<li>Thinking fondly of you and wishing you a quick recovery</li>
 <li> </li>
 <li> </li>
 </ul>
 
+  
 Adsense ad here
   
 <p>
