--- a/index2.html
+++ b/index2.html
@@ -91,10 +91,8 @@ Get well Image here
 
 </p>
 
- <blockquote> “Hardships often prepare ordinary people for an extraordinary destiny.” -C.S. Lewis</blockquote>
-  
 <ul>
-<li> </li>
+<li>“Hardships often prepare ordinary people for an extraordinary destiny” - C.S. Lewis</li>
 <li> </li>
 <li> </li>
 <li> </li>
