--- a/index2.html
+++ b/index2.html
@@ -72,12 +72,13 @@ Adsense ad here
 <li>Work has been so boring without you there! We all can't wait to have you back, so please get well soon</li>
 <li>Don't worry, we'll fight this together. I know we can win! You'll be feeling better before you know it</li>
 <li>Thinking fondly of you and wishing you a quick recovery</li>
-<li> </li>
-<li> </li>
+<li>Sending you the biggest hugs and wishing you love and good health</li>
+<li>So sorry to hear you're feeling unwell. Hoping you regain that spark we all know and love very soon</li>
 </ul>
 
-  
+<p> 
 Adsense ad here
+</p>
   
 <p>
 Get well Image here
