--- a/index2.html
+++ b/index2.html
@@ -91,18 +91,18 @@ Adsense ad here
 <p>
 
 </p>
-
+  
 <ul>
-<li>“Hardships often prepare ordinary people for an extraordinary destiny” - C.S. Lewis</li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
+<li>Best wishes and hoping you're feeling yourself again very soon</li>
+<li>I can't wait to see that amazing smile of yours again. Feel better real soon!</li>
+<li>The most important thing in illness is never to lose heart. We're right there with you. Never lose hope</li>
+<li>You're always in my heart - get well soon</li>
+<li>Recovery is a process. It takes time, it takes patience, it takes everything you've got</li>
+<li>Take the recovery slowly - we want you to be as good as, if not better than before!</li>
+<li>Hoping you feel better soon and just ask if you need anything. I'll always be there for you</li>
+<li>All our prayers will be for you to make a quick recovery</li>
+<li>I hope these flowers lighten your day and bring you some joy. Get well soon</li>
+<li></li>
 <li> </li>
 <li> </li>
 <li> </li>
