--- a/index2.html
+++ b/index2.html
@@ -102,14 +102,16 @@ Adsense ad here
 <li>Hoping you feel better soon and just ask if you need anything. I'll always be there for you</li>
 <li>All our prayers will be for you to make a quick recovery</li>
 <li>I hope these flowers lighten your day and bring you some joy. Get well soon</li>
-<li></li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
+<li>Being ill is no fun! Hoping you get  better soon</li>
+<li>I know these words may seem like nothing but I hope they can lift your mood a little and remind you how much I care</li>
+<li>I hope each day brings you renewed strength and much closer to recovery</li>
+<li>Hoping you're 100% again soon!</li>
+<li>As you travel the path of recuperation, I wish you comfort, care and speedy healing</li>
+<li>Sending healthy vibes your way and wishing for a quick recovery</li>
+<li>I’m Florence Nightingale and you’re my patient. We will get through this together</li>
+<li>Wishing I could take away all your pain, and sending all my love</li>
 </ul>
-
+  
 <p>
 
 </p>
