--- a/index2.html
+++ b/index2.html
@@ -125,16 +125,17 @@ Adsense ad here
 <hr>
 
 <ul>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
+<li>I'm terrible at writing these messages but just wanted to wish you a speedy recovery and to feel better soon</li>
+<li>Wishing you all the best and reminding you to take it easy as you get better</li>
+<li>Missing you loads! Get well soon!!</li>
+<li>We all can't wait to have you back soon. Feel better!</li>
+<li>I hope my flowers help contribute to you feeling much better</li>
+<li>Good health starts with a happy heart</li>
+<li>Thinking of you during this tough time. I'm sure you'll be feeling better soon</li>
+<li>I hope these flowers brighten both your room and your heart</li>
+<li>Sending you good wishes and get well cheer</li>
+<li>Our warmest thoughts for you to make the quickest recovery</li>
+<li>Wishing you so much love and the speediest of recoveries</li>
 </ul>
 
 <h3> </h3>
@@ -161,7 +162,7 @@ Adsense ad here
 <li> </li>
 <li> </li>
 </ul>
-
+  
 <hr>
 
 <h2> </h2>
