--- a/index2.html
+++ b/index2.html
@@ -113,7 +113,7 @@ Adsense ad here
 </ul>
   
 <p>
-
+<img src="/img/feel-better-soon-message.png" />
 </p>
 
 <h2>What to Write in a Get Well Card</h2>
