--- a/index2.html
+++ b/index2.html
@@ -151,16 +151,16 @@ Adsense ad here
 </p>
 
 <ul>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
+<li>May you be enveloped by good health, warming thoughts and a quick recovery</li>
+<li>Wishing you tremendous strength and positive thoughts at this difficult time</li>
+<li>Missing you so much and constantly wishing for your speedy recovery</li>
+<li>Keep thinking positively and stay strong - you'll be better before you know it</li>
+<li>Hoping you feel back to your old self soon</li>
+<li>As each day passes you're that little bit closer to being back on your feet. Get well real soon!</li>
+<li>Wishing you relief from all your aches and pains</li>
+<li>Sending you loving thoughts for a speedy recovery</li>
+<li>So sorry you're not feeling well. We will be thinking of you as you get better</li>
+<li>Have a restful recovery and come back even stronger!</li>
 </ul>
   
 <hr>
