--- a/index2.html
+++ b/index2.html
@@ -168,16 +168,19 @@ Adsense ad here
 <h2> </h2>
 
 <ul>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
-<li> </li>
+<li>Relax, rest and enjoy your time off. We can't wait to see you when you feel up to returning</li>
+<li>Wishing you brighter days ahead</li>
+<li>I heard you're feeling under the weather - get better soon</li>
+<li>Take it slow and steady and I hope you get better one day at a time</li>
+<li>You're a tough cookie - you'll be better soon!</li>
+<li>Wishing for your fast recovery</li>
+<li>Hope you recover quickly!</li>
+<li>Wishing you a quick recovery and continued good health</li>
+<li>Missing you terribly and wishing you all the best. Lots of love and feel better soon</li>
+<li>I hope these words can brighten your day - I miss you and can't wait 'til you're feeling better!</li>
+<li>Our deepest thoughts and prayers are with you as you heal</li>
+<li>May your recovery be quick, painless and find you in tip top condition</li>
+<li>Praying your stay in hospital is short and your recovery quick and simple</li>
 </ul>
 
 <hr>
