--- a/index2.html
+++ b/index2.html
@@ -81,7 +81,7 @@ Adsense ad here
 </p>
   
 <p>
-<img src="/img/get-well-soon-messages.png" align="center" />
+<img src="/img/get-well-soon-messages.png" align="middle" />
 </p>
   
 <hr>
