--- a/index2.html
+++ b/index2.html
@@ -115,7 +115,9 @@ Adsense ad here
 </ul>
   
 <p>
+<div class="center">
 <img src="/img/feel-better-soon-message.png" />
+</div>
 </p>
 
 <h2>What to Write in a Get Well Card</h2>
