--- a/index2.html
+++ b/index2.html
@@ -81,9 +81,7 @@ Adsense ad here
 </p>
   
 <p>
-<div class="center">
-<img src="/img/get-well-soon-messages.png" />
-</div>
+<img class="center" src="/img/get-well-soon-messages.png" />
 </p>
   
 <hr>
@@ -115,9 +113,7 @@ Adsense ad here
 </ul>
   
 <p>
-<div class="center">
-<img src="/img/feel-better-soon-message.png" />
-</div>
+<img class="center" src="/img/feel-better-soon-message.png" />
 </p>
 
 <h2>What to Write in a Get Well Card</h2>
