--- a/index2.html
+++ b/index2.html
@@ -81,7 +81,7 @@ Adsense ad here
 </p>
   
 <p>
-<img class="center" src="/img/get-well-soon-messages.png" />
+<img src="/img/get-well-soon-messages.png" class="center" />
 </p>
   
 <hr>
@@ -113,7 +113,7 @@ Adsense ad here
 </ul>
   
 <p>
-<img class="center" src="/img/feel-better-soon-message.png" />
+<img src="/img/feel-better-soon-message.png" class="center" />
 </p>
 
 <h2>What to Write in a Get Well Card</h2>
