--- a/index2.html
+++ b/index2.html
@@ -196,6 +196,38 @@ Adsense ad here
 <p>
 
 </p>
+  
+<ul>
+<li>We know you're feeling a bit under the weather but we hope you get back right up! We Miss you!</li>
+<li>Sending love and light, and hoping you feel better soon</li>
+<li>Think positive thoughts and you may heal more quickly than you thought possible. We miss you and want you better soon!</li>
+<li>The most important thing in illness is never to lose heart. Our prayers are with you. Get well soon!</li>
+<li>Sending thoughtful prayers your way that you will soon feel right as rain</li>
+<li>I hope the compassion and love of friends and family helps you recover. Much love</li>
+<li>Take care and you'll be back doing the things you love in no time</li>
+<li>Know that there are so many of us that care about and will be by your side as you recover</li>
+<li>If I could I would switch places with you and take away all your pain. Stay strong and I know you'll get through this</li>
+<li>Rest and just focus on getting well! We all miss you so much!</li>
+<li>It may not be a cure but hopefully these flowers will bring a smile to your face. Get well soon</li>
+<li>A get well wish for my favourite patient. Thinking of you and sending my love</li>
+<li>Looking forward to catching up with you once you're feeling your old self again. Feel better</li>
+<li>I know you'll be the bubbly, vivacious life of the party we all love really soon and making us laugh again</li>
+<li>I was so sad to hear about you feeling unwell. Get better soon!</li>
+<li>You bring so much happiness and joy to everyone's lives. Hopefully this card will bring a little to yours. Get well soon</li>
+<li>I hope this message finds you feeling better and on the road to recovery</li>
+<li>I know how much you like roses so hopefully this bouquet will lift your spirits. Get well soon</li>
+<li>You mean the world to me, so get well soon!</li>
+<li>I can't pretend to be a doctor and cure all your woes but I can do what I do best - bring a smile to your face. Here's to a speedy recovery!</li>
+<li>As you recover and find your feet again know that we'll be here to support you all the way</li>
+<li>Let the prayers of loved ones help ease the burden of illness. We'll be there for you as you make your recovery</li>
+<li>I'm so sorry to hear about your illness. My thoughts are with you at this difficult time and sending strength for you to get well</li>
+<li>I will move heaven and earth to help you get better. Whatever you need, just ask</li>
+<li>When you get better we're going to party like there's no tomorrow! Just hurry up will ya!</li>
+<li>Work just isn't the same without you. Get better soon 'cause we miss you like crazy!</li>
+<li>This is just a quick note to say how much I'm thinking of you as you get better. I'll be round to visit soon, I promise</li>
+<li>You're an inspiration in how you're dealing with all this. Just focus all your efforts on feeling better and I'll see you soon</li>
+<li>Wishing you so much love and so many positive thoughts to get better better as soon as possible</li>
+</ul>
 
 </div>
 
