--- a/index2.html
+++ b/index2.html
@@ -237,7 +237,7 @@ Adsense ad here
 
 <div id="footer">
 
-<a href="/about/">About</a>  ●  <a href="/contact/">Contact</a>  ●  <a href="/privacy/">Privacy Policy</a> 
+<a href="/about/">About</a>  |  <a href="/contact/">Contact</a>  | <a href="/privacy/">Privacy Policy</a> 
 
       <div id="copyright"><p>© 2018 getwellmessages.net </p></div>
 
