--- a/get-well-wishes/index.html
+++ b/get-well-wishes/index.html
@@ -20,3 +20,64 @@
   <meta property="og:image" content="https://www.getwellmessages.net/img/condolence-candle.jpg">
   <!-- <script type="text/javascript" src="https://d31vxm9ubutrmw.cloudfront.net/static/js/2055.js"></script> -->
 <link rel="preload" href="https://adservice.google.co.uk/adsid/integrator.js?domain=getwellmessages.net" as="script"><script src="https://pagead2.googlesyndication.com/pagead/js/r20180822/r20180604/osd.js"></script><script src="https://pagead2.googlesyndication.com/pub-config/r20160913/ca-pub-7704978023988513.js"></script><script type="text/javascript" src="https://adservice.google.co.uk/adsid/integrator.js?domain=getwellmessages.net"></script><link rel="preload" href="https://adservice.google.com/adsid/integrator.js?domain=getwellmessages.net" as="script"><script type="text/javascript" src="https://adservice.google.com/adsid/integrator.js?domain=getwellmessages.net"></script></head>
+
+<body itemscope="" itemtype="https://schema.org/WebPage">
+  <a href="/" class="logo"><img src="/img/IMG_7208.PNG" alt="Get Well Messages"></a>
+
+<div class="wrapper">
+          <h1>Get Well Wishes</h1>
+      <div class="sharing">
+
+  <a class="sharing-button twitter" href="https://twitter.com/intent/tweet?text=Test Post!&amp;url=http://www.crotchet.net/test-post/&amp;via=crotchetnet&amp;related=crotchetnet" rel="nofollow" title="Share on Twitter">Twitter</a>
+
+  <a class="sharing-button facebook" href="https://facebook.com/sharer.php?u=http://www.crotchet.net/test-post/" rel="nofollow" target="_blank" title="Share on Facebook">Facebook</a>
+
+  <a class="sharing-button googleplus" href="https://plus.google.com/share?url=http://www.crotchet.net/test-post/" rel="nofollow" target="_blank" title="Share on Google Plus">Google+</a>
+
+</div>
+
+<p>
+When a friend or loved one is ill, has had surgery or is recovering from an injury the natural reaction is to want them to get well soon. You don't want to see someone you care about suffering or feeling poorly. So the way we try to cheer them up whilst they recover (aside from visiting them) is to send a get well soon message and gift. Something that can help lift their spirits and make them feel better as quickly as possible. 
+  </p>
+  <p>
+Even a small gesture can go a long way when someone is feeling unwell. So use one of these 100 get well soon wishes to find the perfect words to let them know how much you're thinking of them. Touching or inspirational get well soon quotes and messages may be the boost that gives them a speedy recovery. So get your pen out and start writing!
+</p>
+
+Adsense ad here
+
+  <h2>Get Well Wishes</h2>
+  
+<ul class="heart">
+  
+<li>Wishing you a speedy and full recovery. Hoping you feel much better really soon</li>
+<li>Sending you healthy thoughts and wishes for the fastest recovery</li>
+<li>Just a quick note to let you know you're in my thoughts and hoping you get well soon</li>
+<li>You're one of the strongest people I know - you'll be fighting fit in no time!</li>
+<li>Find strength in the friends and family around you, take their love and use it to heal</li>
+<li>As each day passes you're one closer to a complete recovery! Take those days one at a time and know we're here for you</li>
+<li>We were so sorry to hear you've been unwell. You are in our thoughts as you get back on your feet</li>
+<li>I hope this message let's you know how much we care and will be thinking of you. Wishing you better health</li>
+<li>Sending you sunshine to brighten your day and warm wishes for a speedy recovery</li>
+<li>We hope these flowers will add a little cheer to your day and you feel better soon </li>
+</ul>
+
+Adsense ad here
+
+<ul class="heart">
+<li>Missing you loads and can't wait until I get to see you again! Get well soon!</li>
+<li>Our Prayers will be for you to feel better and make a swift recovery</li>
+<li>Recuperation takes time. Don't rush yourself, rest as much as you need and we're sure you'll be feeling better really soon</li>
+<li>I hope this message can help you feel a little better and bring a smile to your face</li>
+<li>Remember that you're not alone. We'll be here by your side as you get through this</li>
+<li>Work has been so boring without you there! We all can't wait to have you back, so please get well soon</li>
+<li>Don't worry, we'll fight this together. I know we can win! You'll be feeling better before you know it</li>
+<li>Thinking fondly of you and wishing you a quick recovery</li>
+<li>Sending you the biggest hugs and wishing you love and good health</li>
+<li>So sorry to hear you're feeling unwell. Hoping you regain that spark we all know and love very soon</li>
+</ul>
+
+<p> 
+Adsense ad here
+</p>
+  
+  
