--- a/get-well-wishes/index.html
+++ b/get-well-wishes/index.html
@@ -79,5 +79,92 @@ Adsense ad here
 <p> 
 Adsense ad here
 </p>
+
+<p>
+<img src="/img/get-well-soon-messages.png" class="center" />
+</p>
+  
+<hr>
+  
+<h2>Get Well Soon Messages</h2> 
+  
+<p>
+
+</p>
+  
+<ul>
+<li>Best wishes and hoping you're feeling yourself again very soon</li>
+<li>I can't wait to see that amazing smile of yours again. Feel better real soon!</li>
+<li>The most important thing in illness is never to lose heart. We're right there with you. Never lose hope</li>
+<li>You're always in my heart - get well soon</li>
+<li>Recovery is a process. It takes time, it takes patience, it takes everything you've got</li>
+<li>Take the recovery slowly - we want you to be as good as, if not better than before!</li>
+<li>Hoping you feel better soon and just ask if you need anything. I'll always be there for you</li>
+<li>All our prayers will be for you to make a quick recovery</li>
+<li>I hope these flowers lighten your day and bring you some joy. Get well soon</li>
+<li>Being ill is no fun! Hoping you get  better soon</li>
+<li>I know these words may seem like nothing but I hope they can lift your mood a little and remind you how much I care</li>
+<li>I hope each day brings you renewed strength and much closer to recovery</li>
+<li>Hoping you're 100% again soon!</li>
+<li>As you travel the path of recuperation, I wish you comfort, care and speedy healing</li>
+<li>Sending healthy vibes your way and wishing for a quick recovery</li>
+<li>I’m Florence Nightingale and you’re my patient. We will get through this together</li>
+<li>Wishing I could take away all your pain, and sending all my love</li>
+</ul>
+  
+<p>
+<img src="/img/feel-better-soon-message.png" class="center" />
+</p>
+
+<h2>What to Write in a Get Well Card</h2>
+
+<p>
+
+</p>
+
+<hr>
+
+<ul>
+<li>I'm terrible at writing these messages but just wanted to wish you a speedy recovery and to feel better soon</li>
+<li>Wishing you all the best and reminding you to take it easy as you get better</li>
+<li>Missing you loads! Get well soon!!</li>
+<li>We all can't wait to have you back soon. Feel better!</li>
+<li>I hope my flowers help contribute to you feeling much better</li>
+<li>Good health starts with a happy heart</li>
+<li>Thinking of you during this tough time. I'm sure you'll be feeling better soon</li>
+<li>I hope these flowers brighten both your room and your heart</li>
+<li>Sending you good wishes and get well cheer</li>
+<li>Our warmest thoughts for you to make the quickest recovery</li>
+<li>Wishing you so much love and the speediest of recoveries</li>
+</ul>
+
+<h3> </h3>
+
+<p>
+
+</p>
+
+<h3> </h3>
+
+<p>
+
+</p>
+
+<ul>
+<li>May you be enveloped by good health, warming thoughts and a quick recovery</li>
+<li>Wishing you tremendous strength and positive thoughts at this difficult time</li>
+<li>Missing you so much and constantly wishing for your speedy recovery</li>
+<li>Keep thinking positively and stay strong - you'll be better before you know it</li>
+<li>Hoping you feel back to your old self soon</li>
+<li>As each day passes you're that little bit closer to being back on your feet. Get well real soon!</li>
+<li>Wishing you relief from all your aches and pains</li>
+<li>Sending you loving thoughts for a speedy recovery</li>
+<li>So sorry you're not feeling well. We will be thinking of you as you get better</li>
+<li>Have a restful recovery and come back even stronger!</li>
+</ul>
+  
+<hr>
+
+<h2> </h2>
   
   
