--- a/get-well-soon-quotes/index.html
+++ b/get-well-soon-quotes/index.html
@@ -1,1 +1,93 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Top 100 Get Well Wishes - getwellmessages.net</title>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="/css/main.css" rel="stylesheet" type="text/css">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="dns-prefetch" href="//www.google-analytics.com">
+  <link rel="dns-prefetch" href="//pagead2.googlesyndication.com">
+  <link rel="preconnect" href="//www.google-analytics.com/">
+  <link rel="preconnect" href="//pagead2.googlesyndication.com">
+  <meta name="author" content="getwellmessages.net">
+  <meta name="description"  content="Find the best get well wishes and let a friend or loved one know you're thinking of them with these touching get well soon messages.">
+  <meta name="keywords" content="get well messages, get well wishes, compassionate get well messages, get well">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Top 100 Get Well Wishes - getwellmessages.net">
+  <meta property="og:description" content="Find the best get well wishes and let a friend or loved one know you're thinking of them with these touching get well soon messages.">
+  <meta property="og:image" content="https://www.getwellmessages.net/img/condolence-candle.jpg">
+  <!-- <script type="text/javascript" src="https://d31vxm9ubutrmw.cloudfront.net/static/js/2055.js"></script> -->
+<link rel="preload" href="https://adservice.google.co.uk/adsid/integrator.js?domain=getwellmessages.net" as="script"><script src="https://pagead2.googlesyndication.com/pagead/js/r20180822/r20180604/osd.js"></script><script src="https://pagead2.googlesyndication.com/pub-config/r20160913/ca-pub-7704978023988513.js"></script><script type="text/javascript" src="https://adservice.google.co.uk/adsid/integrator.js?domain=getwellmessages.net"></script><link rel="preload" href="https://adservice.google.com/adsid/integrator.js?domain=getwellmessages.net" as="script"><script type="text/javascript" src="https://adservice.google.com/adsid/integrator.js?domain=getwellmessages.net"></script></head>
 
+<body itemscope="" itemtype="https://schema.org/WebPage">
+  <a href="/" class="logo"><img src="/img/IMG_7208.PNG" alt="Get Well Messages"></a>
+
+<div class="wrapper">
+          <h1>Get Well Wishes</h1>
+      <div class="sharing">
+
+  <a class="sharing-button twitter" href="https://twitter.com/intent/tweet?text=Test Post!&amp;url=http://www.crotchet.net/test-post/&amp;via=crotchetnet&amp;related=crotchetnet" rel="nofollow" title="Share on Twitter">Twitter</a>
+
+  <a class="sharing-button facebook" href="https://facebook.com/sharer.php?u=http://www.crotchet.net/test-post/" rel="nofollow" target="_blank" title="Share on Facebook">Facebook</a>
+
+  <a class="sharing-button googleplus" href="https://plus.google.com/share?url=http://www.crotchet.net/test-post/" rel="nofollow" target="_blank" title="Share on Google Plus">Google+</a>
+
+</div>
+
+<p>
+  
+</p>
+  
+<h2>Inspirational Get Well Soon Quotes</h2>
+
+<ol>
+<li>“Although the world is full of suffering, it’s full also of the overcoming it.” – Helen Keller </li>
+<li>“This too shall pass.” – Persian Sufi Poets</li>
+<li>"Man never made any material as resilient as the human spirit" – Bernard Williams</li>
+ <li>“Hardships often prepare ordinary people for an extraordinary destiny.” – C.S. Lewis</li>
+<li>“There is no medicine like hope, no incentive so great, and no tonic so powerful as expectation of something tomorrow” – Orison Swett Marden</li>
+<li>"There is one consolation in being sick; and that is the possibility that you may recover to a better state than you were ever in before"  – Henry David Thoreau</li>
+<li>“It always seems impossible until its done”  – Nelson Mandela</li>
+<li>"Our greatest glory is not in never failing but in rising up every time we fail" – Ralph Waldo Emerson</li>
+<li>"Believe you can and you’re halfway there" – Theodore Roosevelt</li>
+<li>"The best time to plant a tree was 20 years ago. The second best time is now" – Chinese Proverb</li>
+</ol>
+
+
+
+<h2>Uplifting Get Well Quotes</h2>
+
+<ol>
+<li>"Your never know how much they care until you are under the weather.” – C. Kohler</li>
+<li>"The best of healers is good cheer" – Pindus</li>
+<li>"The greatest healing therapy is friendship and love" – Hubert Humphrey</li>
+<li>"The treatment is really a cooperative of a trinity - the patient, the doctor and the inner doctor"  – Ralph Bircher</li>
+<li>"Pain is inevitable. Suffering is optional" – M. Kathleen Casey</li>
+<li>"What lies behind us and what lies before us are tiny matters compared to what lies within us" – Ralph Waldo Emerson</li>
+<li>"Yesterday is history, tomorrow is a mystery, and today is a gift; that’s why they call it the present" – Eleanor Roosevelt</li>
+<li>"Fear knocked on my door.. I opened it and there was nobody there" Unknown</li>
+<li>"It isn’t always easy, but when you’re not feeling well – hope it helps to know others are thinking of you – and hoping that you’ll be better very soon. Take good care of yourself" –Unknown</li>
+<li>"It is never too late to live happily ever after" – Unknown</li>
+</ol>
+
+<h2>Funny Get Well Soon Quotes</h2>
+
+<ol>
+<li>"Get well cards have become so humorous that if you don’t get sick you’re missing half the fun" – Flip Wilson</li>
+<li>"The art of medicine consists of amusing the patient while nature cures the disease" – Voltaire</li>
+<li>"I enjoy convalescence. It is the part that makes the illness worth while" – George Bernard Shaw</li>
+<li>"I wonder why you can always read a doctor’s bill and you can never read his prescription.” – Finley Peter Dunne</li>
+<li> “Be careful when reading health books; you may die of a misprint.” – Mark Twain</li>
+<li>"A Jewish woman had two chickens. One got sick, so the woman made chicken soup out of the other one to help the sick one get well"  –
+Henry Youngman</li>
+<li>"I reckon being ill as one of the great pleasures of life, provided one is not too ill and is not obliged to work till one is better" – Samuel Butler</li>
+<li>"I know God will not give me anything I can’t handle. I just wish He didn’t trust me so much" – Mother Teresa</li>
+<li>"Sleep, riches, and health to be truly enjoyed must be interrupted" –
+Johann Paul Friedrich Richter</li>
+<li></li>
+<li></li>
+
+</ol>
+  
