--- a/get-well-soon-quotes/index.html
+++ b/get-well-soon-quotes/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Top 100 Get Well Wishes - getwellmessages.net</title>
+  <title>Get Well Soon Quotes: 46 Touching and Uplifting Recovery Quotes</title>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,7 +25,7 @@
   <a href="/" class="logo"><img src="/img/IMG_7208.PNG" alt="Get Well Messages"></a>
 
 <div class="wrapper">
-          <h1>Get Well Wishes</h1>
+          <h1>Get Well Soon Quotes: 46 Touching and Uplifting Recovery Quotes</h1>
       <div class="sharing">
 
   <a class="sharing-button twitter" href="https://twitter.com/intent/tweet?text=Test Post!&amp;url=http://www.crotchet.net/test-post/&amp;via=crotchetnet&amp;related=crotchetnet" rel="nofollow" title="Share on Twitter">Twitter</a>
