--- a/get-well-wishes/index.html
+++ b/get-well-wishes/index.html
@@ -119,8 +119,20 @@ Adsense ad here
 <h2>What to Write in a Get Well Card</h2>
 
 <p>
-
+Writing an inspirational get well soon message may seem tricky but can be achieved without too much trouble. Your friends or loved one will appreciate you taking the time to wish them a speedy recovery. And kind, uplifting words can really help to improve the recovering persons mood and positivity.
 </p>
+
+<p>
+We've put together this list of 100 get well wishes to help you get the best message and hopefully inspire you. However if you want to write your own, with your own words, you can follow some simple steps.
+</p>
+
+<ul>
+<li>Choose your words carefully, being respectful and sensitive to how the sick person is feeling is essential.</li>
+<li>Be positive. Don't focus on the negatives of their illness. Try to lift their mood and make them feel better.</li>
+<li>If you feel it's appropriate then you can use a joke or funny message. Be careful though and certain they won't take offence at this.</li>
+<li>Mention you are thinking of them. For a sick friend or family member to know they are in the thoughts of the people closest to them is a real lift.</li>
+<li>If you can - offer support. A message saying you're going to visit them, bring food, something like that. Even small chores they may need doing would be a huge help.</li>
+</ul>
 
 <hr>
 
