--- a/get-well-wishes/index.html
+++ b/get-well-wishes/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Top 100 Get Well Wishes - getwellmessages.net</title>
+  <title>Top 100 Get Well Wishes | getwellmessages.net</title>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
