--- a/get-well-soon-quotes/index.html
+++ b/get-well-soon-quotes/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Get Well Soon Quotes: 46 Touching and Uplifting Recovery Quotes</title>
+  <title>Get Well Soon Quotes: 46 Touching and Uplifting Recovery Quotes | getwellmessages.net</title>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -90,4 +90,3 @@ Johann Paul Friedrich Richter</li>
 <li></li>
 
 </ol>
-  
