--- a/get-well-wishes/index.html
+++ b/get-well-wishes/index.html
@@ -134,6 +134,14 @@ We've put together this list of 100 get well wishes to help you get the best mes
 <li>If you can - offer support. A message saying you're going to visit them, bring food, something like that. Even small chores they may need doing would be a huge help.</li>
 </ul>
 
+<h3>What Not to Say</h3>
+
+<ul>
+<li>Unless you know the recipient is religious then avoid a message of that nature. Saying "you'll be in my prayers" is absolutely fine but don't go further than that. You could make them uncomfortable.</li>
+<li>Try to be as normal with them as you were before. They won't want to feel like they need special treatment or treated differently to before being ill. Just be the same with them as you always are.</li>
+<li>Don't dwell on the illness or be negative. Stay upbeat, lift their spirits and keep positive for them.</li>
+</ul>  
+  
 <hr>
 
 <ul>
