--- a/get-well-wishes/index.html
+++ b/get-well-wishes/index.html
@@ -157,17 +157,20 @@ We've put together this list of 100 get well wishes to help you get the best mes
 <li>Our warmest thoughts for you to make the quickest recovery</li>
 <li>Wishing you so much love and the speediest of recoveries</li>
 </ul>
+  
+<hr>
 
-<h3> </h3>
+<h2>Sample Get Well Message</h2>
 
 <p>
-
+We aim to make writing a get well card much simpler and allow you to help your sick friend or family member in whatever way they need. A good way to make your card that extra bit special is by adding your own touches to it. Try personalizing our get well notes with a get well soon quote for more inspirational words.
 </p>
+  
+<h2>Funny Feel Better Messages</h2>
 
-<h3> </h3>
-
+  
 <p>
-
+If you want to make the recipient of your card smile or have a laugh then try our funny get well wishes. A funny message can improve their mood and help them stay positive whilst they're unwell, which is key to getting better.   
 </p>
 
 <ul>
