--- a/get-well-wishes/index.html
+++ b/get-well-wishes/index.html
@@ -156,6 +156,8 @@ We've put together this list of 100 get well wishes to help you get the best mes
 <li>Sending you good wishes and get well cheer</li>
 <li>Our warmest thoughts for you to make the quickest recovery</li>
 <li>Wishing you so much love and the speediest of recoveries</li>
+ <li>May you be enveloped by good health, warming thoughts and a quick recovery</li> <li>Wishing you tremendous strength and positive thoughts at this difficult time</li> <li>Missing you so much and constantly wishing for your speedy recovery</li> <li>Keep thinking positively and stay strong - you'll be better before you know it</li> <li>Hoping you feel back to your old self soon</li> <li>As each day passes you're that little bit closer to being back on your feet. Get well real soon!</li> <li>Wishing you relief from all your aches and pains</li> <li>Sending you loving thoughts for a speedy recovery</li> <li>So sorry you're not feeling well. We will be thinking of you as you get better</li> <li>Have a restful recovery and come back even stronger!</li>
+  
 </ul>
   
 <hr>
@@ -173,6 +175,8 @@ We aim to make writing a get well card much simpler and allow you to help your s
 If you want to make the recipient of your card smile or have a laugh then try our funny get well wishes. A funny message can improve their mood and help them stay positive whilst they're unwell, which is key to getting better.   
 </p>
 
+<hr>  
+  
 <ul>
 <li>May you be enveloped by good health, warming thoughts and a quick recovery</li>
 <li>Wishing you tremendous strength and positive thoughts at this difficult time</li>
