--- a/get-well-wishes/index.html
+++ b/get-well-wishes/index.html
@@ -195,10 +195,10 @@ If you want to make the recipient of your card smile or have a laugh then try ou
 
 <hr>
 
-<h3> </h3>
+<h3>Get Well Poems</h3>
 
 <p>
-
+A poem is a great way to express your feelings and really show you care, and you can find a whole range of get well soon poems right here. Send them in your card or share them on Facebook to let others join in wishing someone a fast recovery.
 </p>
 
 <h3> </h3>
