--- a/get-well-wishes/index.html
+++ b/get-well-wishes/index.html
@@ -165,7 +165,7 @@ We've put together this list of 100 get well wishes to help you get the best mes
 <h2>Sample Get Well Message</h2>
 
 <p>
-We aim to make writing a get well card much simpler and allow you to help your sick friend or family member in whatever way they need. A good way to make your card that extra bit special is by adding your own touches to it. Try personalizing our get well notes with a get well soon quote for more inspirational words.
+We aim to make writing a get well card much simpler and allow you to help your sick friend or family member in whatever way they need. A good way to make your card that extra bit special is by adding your own touches to it. Try personalizing our get well notes with a <a href="/get-well-soon-quotes/">get well soon quote</a> for more inspirational words.
 </p>
   
 <h2>Funny Feel Better Messages</h2>
