--- a/get-well-wishes/index.html
+++ b/get-well-wishes/index.html
@@ -248,6 +248,7 @@ A poem is a great way to express your feelings and really show you care, and you
 <div id="footer">
 
 <ol class="breadcrumb" itemscope="" itemtype="http://schema.org/BreadcrumbList">  
+  
 <li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">  
                               <a itemprop="item" href="/"><span itemprop="name">Get Well Messages</span></a><meta itemprop="position" content="1">
   </li>
@@ -255,7 +256,12 @@ A poem is a great way to express your feelings and really show you care, and you
                           <li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
                             <a itemprop="item" href="/condolence-messages"><span itemprop="name">Get Well Quotes</span></a><meta itemprop="position" content="2">
 </li>
-                    </ol>
+          
+<li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">  
+                              <a itemprop="item" href="/"><span itemprop="name">Get Well Poems</span></a><meta itemprop="position" content="1">
+</li>  
+
+</ol>
   
   
 <a href="/about/">About</a>  |  <a href="/contact/">Contact</a>  | <a href="/privacy/">Privacy Policy</a> 
