--- a/get-well-wishes/index.html
+++ b/get-well-wishes/index.html
@@ -252,12 +252,8 @@ A poem is a great way to express your feelings and really show you care, and you
   </li>
   
                           <li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
-                            <a itemprop="item" href="/condolence-messages"><span itemprop="name">Get Well Quotes</span></a><meta itemprop="position" content="2">
-</li>
-          
-<li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">  
-                              <a itemprop="item" href="/"><span itemprop="name">Get Well Poems</span></a><meta itemprop="position" content="1">
-</li>  
+                            <a itemprop="item" href="/get-well-wishes"><span itemprop="name">Get Well Wishes</span></a><meta itemprop="position" content="2">
+</li>      
 
 </ol>    
   
