--- a/get-well-soon-quotes/index.html
+++ b/get-well-soon-quotes/index.html
@@ -90,3 +90,35 @@ Johann Paul Friedrich Richter</li>
 <li></li>
 
 </ol>
+
+</div>
+
+<footer class="site-footer">
+
+<div class="wrapper">
+
+<ol class="breadcrumb" itemscope="" itemtype="http://schema.org/BreadcrumbList">  
+  
+<li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">  
+                              <a itemprop="item" href="/"><span itemprop="name">Get Well Messages</span></a><meta itemprop="position" content="1">
+  </li>
+  
+                          <li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
+                            <a itemprop="item" href="/get-well-wishes"><span itemprop="name">Get Well Wishes</span></a><meta itemprop="position" content="2">
+</li>      
+
+</ol>    
+  
+<div id="footer">
+
+<a href="/about/">About</a>  |  <a href="/contact/">Contact</a>  | <a href="/privacy/">Privacy Policy</a> 
+
+      <div id="copyright"><p>© 2018 getwellmessages.net </p></div>
+
+</div>
+</div>
+
+</footer>
+
+</body>
+</html>
