--- a/get-well-soon-quotes/index.html
+++ b/get-well-soon-quotes/index.html
@@ -104,7 +104,7 @@ Johann Paul Friedrich Richter</li>
   </li>
   
                           <li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
-                            <a itemprop="item" href="/get-well-wishes"><span itemprop="name">Get Well Wishes</span></a><meta itemprop="position" content="2">
+                            <a itemprop="item" href="/get-well-soon-quotes"><span itemprop="name">Get Soon Quotes</span></a><meta itemprop="position" content="2">
 </li>      
 
 </ol>    
