--- a/get-well-wishes/index.html
+++ b/get-well-wishes/index.html
@@ -81,7 +81,7 @@ Adsense ad here
 </p>
 
 <p>
-<img src="/img/get-well-soon-messages.png" class="center" />
+<img src="/img/get-well-soon-messages.png" class="center" alt="get well soon message flower basket" />
 </p>
   
 <hr>
@@ -113,7 +113,7 @@ Adsense ad here
 </ul>
   
 <p>
-<img src="/img/feel-better-soon-message.png" class="center" />
+<img src="/img/feel-better-soon-message.png" class="center" alt="funny get well message bee well quick recovery and good health" />
 </p>
 
 <h2>What to Write in a Get Well Card</h2>
