--- a/get-well-wishes/index.html
+++ b/get-well-wishes/index.html
@@ -92,7 +92,7 @@ Adsense ad here
 
 </p>
   
-<ul>
+<ul class="heart">
 <li>Best wishes and hoping you're feeling yourself again very soon</li>
 <li>I can't wait to see that amazing smile of yours again. Feel better real soon!</li>
 <li>The most important thing in illness is never to lose heart. We're right there with you. Never lose hope</li>
@@ -144,7 +144,7 @@ We've put together this list of 100 get well wishes to help you get the best mes
   
 <hr>
 
-<ul>
+<ul class="heart">
 <li>I'm terrible at writing these messages but just wanted to wish you a speedy recovery and to feel better soon</li>
 <li>Wishing you all the best and reminding you to take it easy as you get better</li>
 <li>Missing you loads! Get well soon!!</li>
@@ -177,7 +177,7 @@ If you want to make the recipient of your card smile or have a laugh then try ou
 
 <hr>
 
-<ul>
+<ul class="heart">
 <li>Relax, rest and enjoy your time off. We can't wait to see you when you feel up to returning</li>
 <li>Wishing you brighter days ahead</li>
 <li>I heard you're feeling under the weather - get better soon</li>
@@ -207,7 +207,7 @@ A poem is a great way to express your feelings and really show you care, and you
 
 </p>
   
-<ul>
+<ul class="heart">
 <li>We know you're feeling a bit under the weather but we hope you get back right up! We Miss you!</li>
 <li>Sending love and light, and hoping you feel better soon</li>
 <li>Think positive thoughts and you may heal more quickly than you thought possible. We miss you and want you better soon!</li>
