--- a/imagetest.html
+++ b/imagetest.html
@@ -1,3 +1,9 @@
+---
+layout: default
+---
+
+<div class="home">
+
 {% for page in site.pages %}
           {% if page.image %}
           <img src="/img/{{ page.image }}" alt="" />
@@ -5,3 +11,5 @@
           <h2><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></h2>
           {% endif %}
         {% endfor %}
+
+</div>
