--- a/imagetest.html
+++ b/imagetest.html
@@ -6,9 +6,7 @@ layout: default
 
 {% for page in site.pages %}
           {% if page.image %}
-          <img src="/img/{{ page.image }}" alt="" />
-          {% if page.title %}
-          <h2><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></h2>
+          <img src="/img/{{ page.image }}" alt="" /
           {% endif %}
         {% endfor %}
 
