--- a/imagetest.html
+++ b/imagetest.html
@@ -5,9 +5,9 @@ layout: default
 <div class="home">
 
 {% for page in site.pages %}
-          {% if page.image %}
-          <img src="/img/{{ page.image }}" alt="" /
-          {% endif %}
+          {% if page.title %}
+          <h2><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></h2>
+               {% endif %}
         {% endfor %}
 
 </div>
