--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+published: true
 ---
 
 <div class="home">
@@ -71,4 +72,12 @@ layout: default
         {% endfor %}
 		</ul>
 
+{% for page in site.pages %}
+          {% if page.image %}
+          <img src="/img/{{ page.image }}" alt="" />
+          {% if page.title %}
+          <h2><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></h2>
+          {% endif %}
+        {% endfor %}  
+  
 </div>
