--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ published: true
 {% for page in site.pages %}
           {% if page.image %}
           <img src="/img/{{ page.image }}" alt="" />
+            <h2><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></h2>
          
           {% endif %}
         {% endfor %}  
