--- a/imagetest.html
+++ b/imagetest.html
@@ -3,8 +3,12 @@ layout: default
 published: true
 ---
 
+Testing...
+
 <div class="home">
 
+  TESTING THIS
+  
   {% for page in site.pages %}
           {% if page.image %}
           <img src="/img/{{ page.image }}" alt="" />
