--- a/index.html
+++ b/index.html
@@ -106,24 +106,24 @@ If the sick or injured person is religious then a prayer may be the perfect way 
 Other Get Well Resources:
 <div class="row">
 <div class="column3">
-  <a class="page-link2" href="/get-well-text-messages"> <img class="img" src="/img/get-well-text-messages-150x150.png" alt="" /></a>
-  <a href="/get-well-text-messages"><h3>Get Well Soon Text Messages</h3></a>
+  <a href="/get-well-text-messages"> <img class="img" src="/img/get-well-text-messages-150x150.png" alt="" /></a>
+  <a class="page-link2" href="/get-well-text-messages"><h3>Get Well Soon Text Messages</h3></a>
   </div>
   <div class="column3">
-  <a class="page-link2" href="/get-well-soon-messages-after-surgery"> <img class="img" src="/img/get-well-soon-messages-after-surgery-150x150.png" alt="" /></a>
-   <a href="/get-well-soon-messages-after-surgery"> <h3>Get Well Soon Messages after Surgery</h3></a>
+  <a href="/get-well-soon-messages-after-surgery"> <img class="img" src="/img/get-well-soon-messages-after-surgery-150x150.png" alt="" /></a>
+   <a class="page-link2" href="/get-well-soon-messages-after-surgery"> <h3>Get Well Soon Messages after Surgery</h3></a>
   </div>
   <div class="column3">
-  <a class="page-link2" href="/get-well-soon-messages-for-a-pet"> <img class="img" src="/img/get-well-soon-messages-for-a-pet-150x150.png" alt="" /></a>
-   <a href="/get-soon-messages-for-a-pet"><h3>Get Well Soon Messages for a Pet</h3></a>
+  <a href="/get-well-soon-messages-for-a-pet"> <img class="img" src="/img/get-well-soon-messages-for-a-pet-150x150.png" alt="" /></a>
+   <a class="page-link2" href="/get-soon-messages-for-a-pet"><h3>Get Well Soon Messages for a Pet</h3></a>
 </div>
 <div class="column3">
-  <a class="page-link2" href="/get-well-gifts"> <img class="img" src="/img/get-well-gifts-150x150.png" alt="" /></a>
-  <a href="/get-well-gifts"><h3>Get Well Gift Ideas</h3></a>
+  <a href="/get-well-gifts"> <img class="img" src="/img/get-well-gifts-150x150.png" alt="" /></a>
+  <a class="page-link2" href="/get-well-gifts"><h3>Get Well Gift Ideas</h3></a>
   </div>
   <div class="column3">
-  <a class="page-link2" href="/get-well-flowers"> <img class="img" src="/img/get-well-flowers-200x200.png" alt="" /></a>
-    <a href="/get-well-flowers"> <h3>Get Well Flowers</h3></a>
+  <a href="/get-well-flowers"> <img class="img" src="/img/get-well-flowers-200x200.png" alt="" /></a>
+    <a class="page-link2" href="/get-well-flowers"> <h3>Get Well Flowers</h3></a>
   </div>
   <div class="column3">
   <a href="/get-well-jokes"> <img class="img" src="/img/get-well-jokes-150x150.png" alt="" /></a>
