--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ If the sick or injured person is religious then a prayer may be the perfect way 
 </div>
 </div>
 
-Other Get Well Resources:
+<h3>Other Get Well Resources:</h3>
 <div class="row">
 <div class="column3">
   <a href="/get-well-text-messages"> <img class="img" src="/img/get-well-text-messages-300x200.png" alt="" /></a>
