--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ If the sick or injured person is religious then a prayer may be the perfect way 
 <h3>Other Get Well Resources:</h3>
 <div class="row">
 <div class="column3">
-  <a href="/get-well-text-messages"> <img class="img" src="/img/get-well-text-messages-300x200.png" alt="get well soon text meddages sms" /></a>
+  <a href="/get-well-soon-text-messages"> <img class="img" src="/img/get-well-text-messages-300x200.png" alt="get well soon text meddages sms" /></a>
   <a class="page-link2" href="/get-well-text-messages"><h3>Get Well Soon Text Messages</h3></a>
   </div>
   <div class="column3">
