--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: What to Write in a Get Well Card
+title2: Get Well Messages
 published: true
 ---
 <p>When someone close to us is unwell the thing we want most is for them get well soon. We may not be able to help speed up their recovery but we can let them know they're in our thoughts. So sending a gift and card with a touching or inspirational get well message is the least we can do. </p>
