--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ And if you know the person well who's ill or injured then you can consider using
 </div>
 
 <p>
-We understand writing a get well message can be tricky. You want your words to make those ill feel better, to lift their mood, and express exactly what they mean to you. Rest assured that a get well card or gift will be warmly received by those recovering. And as long as you're sincere and speak from the heart whatever you say will be greatly appreciated. But if you're still unsure then try our guide to writing the perfect get well message.
+We understand writing a get well message can be tricky. You want your words to make those ill feel better, to lift their mood, and express exactly what they mean to you. Rest assured that a get well card or gift will be warmly received by those recovering. And as long as you're sincere and speak from the heart whatever you say will be greatly appreciated. But if you're still unsure then try our <a href="/get-well-message-writing-guide/">guide to writing the perfect get well message</a>.
 </p>
 
 <p>
